# tauri-update

./: README.md  latest.json  package.json  pnpm-lock.yaml
src/: App.vue
src-tauri/: Cargo.toml  tauri-update.key  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
~/.tauri/: myapp.key  myapp.key.pub
