[package]
name = "tauri-update"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_update_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2" 
tauri-plugin-http = { version = "2", features = ["dangerous-settings"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
